--- a/hw02.html
+++ b/hw02.html
@@ -7,8 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script>
-    </script>
-    <script src="./scripts/hw02_script.js" type="text/javascript"></script>
+    <script src="./scripts/hw02.js" type="text/javascript"></script>
 </body>
 </html>
